force-app/main/default/objects/Account/fields/Footer_Logo__c.field-meta.xml
<CustomField>
    <fullName>Footer_Logo__c</fullName>
    <label>Footer Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>