force-app/main/default/objects/Account/fields/Footer_Width__c.field-meta.xml
<CustomField>
    <fullName>Footer_Width__c</fullName>
    <label>Footer Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>