force-app/main/default/objects/Account/fields/Header_Address__c.field-meta.xml
<CustomField>
    <fullName>Header_Address__c</fullName>
    <label>Header Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>