force-app/main/default/objects/Account/fields/Header_Address_Left_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Header_Address_Left_Spacing__c</fullName>
    <label>Header Address Left Spacing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>