force-app/main/default/objects/Account/fields/Header_Logo__c.field-meta.xml
<CustomField>
    <fullName>Header_Logo__c</fullName>
    <label>Header Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>