force-app/main/default/objects/Account/fields/Header_Logo_Height__c.field-meta.xml
<CustomField>
    <fullName>Header_Logo_Height__c</fullName>
    <label>Header Logo Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>