force-app/main/default/objects/Account/fields/Header_Logo_Width__c.field-meta.xml
<CustomField>
    <fullName>Header_Logo_Width__c</fullName>
    <label>Header Logo Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>